Uploding Home Page

--- a/css/input.css
+++ b/css/input.css
@@ -1,1 +1,50 @@
 @import "tailwindcss";
+
+@keyframes fadeInFromSide {
+  0% {
+    opacity: 0;
+    transform: translateX(-30px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes fadeInFromTop {
+  0% {
+    opacity: 0;
+    transform: translateY(-30px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.animate-side {
+  animation: fadeInFromSide 0.8s cubic-bezier(0.4, 0, 0.2, 1) both;
+}
+
+.animate-top {
+  animation: fadeInFromTop 0.8s cubic-bezier(0.4, 0, 0.2, 1) both;
+}
+
+@keyframes pop-in {
+  from {
+    opacity: 0;
+    transform: scale(1);
+  }
+
+  to {
+    opacity: 1;
+    transform: scale(0.9);
+  }
+}
+.animate-view {
+  animation: pop-in linear both;
+  animation-timeline: view();
+  animation-range: entry 0% entry 50%;
+}
